[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DilatedHash"
authors = [{name = "KOLANICH"}]
description = ""
readme = "ReadMe.md"
keywords = ["DilatedHash"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
	"ProbSetAbs", # @ https://github.com/KOLANICH-libs/ProbSetAbs.py.git
	"bloom-filter2", # @ https://github.com/remram44/python-bloom-filter.git
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/KOLANICH-libs/DilatedHash.py"

[project.optional-dependencies]
cli = ["plumbum", "fsutilz"] # @ https://github.com/prebuilder/fsutilz.py.git

[project.scripts]
DilatedHash = "DilatedHash.__main__:MainCLI.run"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
